# fall-data-viz

./: README.md  proposal.md  pyproject.toml
src/: static_viz_submission.ipynb
static_draft/: about.md  pyproject.toml  static_viz_D1.html  static_viz_D1.ipynb  static_viz_submission.html  static_viz_submission.ipynb  writeup.md
static_draft/Drafts/: static_viz_D1.ipynb  static_viz_submission-Copy1.ipynb  static_viz_submission.html  top_commodities_graph.ipynb
static_draft/data/: emissions_high_granularity.xlsx  regional_data.csv  regional_data.xlsx  static_viz_submission.ipynb
