[tool.poetry]
name = "fall-data-viz"
version = "0.1.0"
description = ""
authors = ["SuchiTailor <suchitailor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
lab = "^8.2"
poline = "^0.6"
polars = "^1.12.0"
altair = "^5.4.1"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
