[tool.poetry]
name = "static-viz-project"
version = "0.1.0"
description = ""
authors = ["SuchiTailor <suchitailor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
lab = "^8.2"
polars = "^1.9.0"
altair = "^5.4.1"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
